deploy: 8b5de32bc001535f663acd6dbee021dafc615815

--- a/coding/Intro to Python/intro.html
+++ b/coding/Intro to Python/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Printing and formatting statements" href="Printing_and_formatting_statements.html" />
-    <link rel="prev" title="Summary statistics" href="../Pandas/Pandas_4summary_statistics.html" />
+    <link rel="next" title="Dictionaries" href="Dictionaries.html" />
+    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -79,14 +79,20 @@
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
-    </li>
     <li class="active">
       <a href="">Intro To Python</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+        <a href="Dictionaries.html">Dictionaries</a>
+      </li>
+      <li class="">
+        <a href="File_handling.html">File handling in Python</a>
+      </li>
+      <li class="">
+        <a href="Flow_control_statements.html">Flow control statements</a>
+      </li>
+      <li class="">
+        <a href="For_loops.html">For loops</a>
       </li>
       <li class="">
         <a href="Functions.html">Creating custom functions</a>
@@ -95,48 +101,42 @@
         <a href="Handling_errors.html">Handling errors</a>
       </li>
       <li class="">
-        <a href="File_handling.html">File handling in Python</a>
-      </li>
-      <li class="">
-        <a href="While_loops.html">While loops</a>
+        <a href="If_statement.html">If construct</a>
       </li>
       <li class="">
         <a href="Importing.html">Importing in Python</a>
       </li>
       <li class="">
-        <a href="If_statement.html">If construct</a>
-      </li>
-      <li class="">
         <a href="List_comprehensions.html">List comprehensions</a>
-      </li>
-      <li class="">
-        <a href="Tuples.html">Tuples</a>
-      </li>
-      <li class="">
-        <a href="Sets.html">Sets</a>
-      </li>
-      <li class="">
-        <a href="For_loops.html">For loops</a>
-      </li>
-      <li class="">
-        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
       <li class="">
         <a href="Lists.html">Lists</a>
       </li>
       <li class="">
-        <a href="Dictionaries.html">Dictionaries</a>
-      </li>
-      <li class="">
-        <a href="Variables.html">Variables</a>
+        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
       <li class="">
         <a href="Nested_lists.html">Nested lists</a>
       </li>
       <li class="">
-        <a href="Flow_control_statements.html">Flow control statements</a>
+        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+      </li>
+      <li class="">
+        <a href="Sets.html">Sets</a>
+      </li>
+      <li class="">
+        <a href="Tuples.html">Tuples</a>
+      </li>
+      <li class="">
+        <a href="Variables.html">Variables</a>
+      </li>
+      <li class="">
+        <a href="While_loops.html">While loops</a>
       </li>
     </ul>
+    </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
     </li>
   </ul>
   </li>
@@ -144,10 +144,10 @@
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
   <li class="">
-    <a href="../../mathematics/intro.html">Mathematics</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -313,8 +313,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Pandas/Pandas_4summary_statistics.html" title="previous page">Summary statistics</a>
-    <a class='right-next' id="next-link" href="Printing_and_formatting_statements.html" title="next page">Printing and formatting statements</a>
+    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
+    <a class='right-next' id="next-link" href="Dictionaries.html" title="next page">Dictionaries</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
