--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Pandas" href="Pandas/intro.html" />
+    <link rel="next" title="Introduction to Python programming language" href="Intro to Python/intro.html" />
     <link rel="prev" title="Dakota" href="Dakota.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,10 +80,10 @@
       <a href="">NumPy Arrays</a>
     </li>
     <li class="">
-      <a href="Pandas/intro.html">Pandas</a>
+      <a href="Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="">
-      <a href="Intro to Python/intro.html">Intro To Python</a>
+      <a href="Pandas/intro.html">Pandas</a>
     </li>
   </ul>
   </li>
@@ -91,10 +91,10 @@
     <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
   <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
+    <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -497,7 +497,7 @@ A[:, ::-1] =
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Dakota.html" title="previous page">Dakota</a>
-    <a class='right-next' id="next-link" href="Pandas/intro.html" title="next page">Pandas</a>
+    <a class='right-next' id="next-link" href="Intro to Python/intro.html" title="next page">Introduction to Python programming language</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
