--- a/mathematics/complex analysis/complex_functions.html
+++ b/mathematics/complex analysis/complex_functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex plane" href="complex_plane.html" />
-    <link rel="prev" title="Complex integration" href="integrating.html" />
+    <link rel="prev" title="Introduction" href="Introduction.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,20 +76,23 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
       <li class="active">
         <a href="">Complex functions</a>
@@ -101,10 +104,7 @@
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -112,24 +112,24 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -669,7 +669,7 @@ Ln(z) &amp; = Ln(|z|e^{i Arg(z)}) =  \ln(|z|) + \ln(e^{i Arg(z)}) \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="integrating.html" title="previous page">Complex integration</a>
+    <a class='left-prev' id="prev-link" href="Introduction.html" title="previous page">Introduction</a>
     <a class='right-next' id="next-link" href="complex_plane.html" title="next page">Complex plane</a>
 
     </div>
