--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
-    <link rel="prev" title="Fractals" href="../complex analysis/Fractals.html" />
+    <link rel="prev" title="Complex integration" href="../complex analysis/integrating.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -95,35 +95,35 @@
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
       <li class="">
-        <a href="Theory.html">Theory</a>
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
       <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+        <a href="Theory.html">Theory</a>
       </li>
     </ul>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -252,7 +252,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../complex analysis/Fractals.html" title="previous page">Fractals</a>
+    <a class='left-prev' id="prev-link" href="../complex analysis/integrating.html" title="previous page">Complex integration</a>
     <a class='right-next' id="next-link" href="Basic_definitions_and_operations.html" title="next page">Basic definitions and operations</a>
 
     </div>
