--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="Pandas_1basics.html" />
-    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
+    <link rel="prev" title="While loops" href="../Intro to Python/While_loops.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -79,6 +79,9 @@
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Intro to Python/intro.html">Intro To Python</a>
+    </li>
     <li class="active">
       <a href="">Pandas</a>
       <ul class="nav sidenav_l3">
@@ -86,24 +89,21 @@
         <a href="Pandas_1basics.html">Introduction</a>
       </li>
       <li class="">
-        <a href="Pandas_6plotting.html">Plotting</a>
+        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
       </li>
       <li class="">
         <a href="Pandas_3merge_combine_group_sort.html">Merging, combining, grouping and sorting</a>
       </li>
       <li class="">
+        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+      </li>
+      <li class="">
         <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
       </li>
       <li class="">
-        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
-      </li>
-      <li class="">
-        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+        <a href="Pandas_6plotting.html">Plotting</a>
       </li>
     </ul>
-    </li>
-    <li class="">
-      <a href="../Intro to Python/intro.html">Intro To Python</a>
     </li>
   </ul>
   </li>
@@ -111,10 +111,10 @@
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
   <li class="">
-    <a href="../../mathematics/intro.html">Mathematics</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -266,7 +266,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
+    <a class='left-prev' id="prev-link" href="../Intro to Python/While_loops.html" title="previous page">While loops</a>
     <a class='right-next' id="next-link" href="Pandas_1basics.html" title="next page">Introduction</a>
 
     </div>
