--- a/extra_resources_for_researchers/Google_Earth_Engine_Foundations.html
+++ b/extra_resources_for_researchers/Google_Earth_Engine_Foundations.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
-    <link rel="prev" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
+    <link rel="next" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
+    <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -77,27 +77,27 @@
     <a href="intro.html">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+      <a href="Camera_Calibration.html">Camera Calibration</a>
+    </li>
+    <li class="">
+      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
     </li>
     <li class="active">
       <a href="">Google Earth Engine Foundations</a>
     </li>
     <li class="">
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+    </li>
+    <li class="">
       <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
-    </li>
-    <li class="">
-      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
-    </li>
-    <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
+    <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -579,8 +579,8 @@ Without CloudMask function:
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Getting_Started_.html" title="previous page">Google Earth Engine Getting Started</a>
-    <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
+    <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started_.html" title="next page">Google Earth Engine Getting Started</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
