--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Downloading earthquake data" href="Seismology.html" />
-    <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
+    <link rel="next" title="Remote Sensing: Image Point Operations" href="Image_Point_Operations.html" />
+    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,43 +76,43 @@
   <li class="">
     <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
     <li class="">
-      <a href="Tides.html">Tides</a>
-    </li>
-    <li class="">
-      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
-    </li>
-    <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
-    </li>
-    <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
     </li>
     <li class="active">
       <a href="">Image Filtering</a>
     </li>
     <li class="">
+      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+    </li>
+    <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
+    </li>
+    <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
     </li>
     <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+      <a href="Tides.html">Tides</a>
+    </li>
+    <li class="">
+      <a href="Wave_dispersion.html">Waves</a>
     </li>
   </ul>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
     <a href="../genindex.html">Index</a>
@@ -544,8 +544,8 @@ Image dimension = (390, 556)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
-    <a class='right-next' id="next-link" href="Seismology.html" title="next page">Downloading earthquake data</a>
+    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
+    <a class='right-next' id="next-link" href="Image_Point_Operations.html" title="next page">Remote Sensing: Image Point Operations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
