--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Fractals" href="Fractals.html" />
-    <link rel="prev" title="Holomorphic functions" href="holomorphic_functions.html" />
+    <link rel="next" title="Complex functions" href="complex_functions.html" />
+    <link rel="prev" title="Fractals" href="Fractals.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,20 +76,23 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="active">
+        <a href="">Introduction</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -100,11 +103,8 @@
       <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
-      <li class="active">
-        <a href="">Introduction</a>
-      </li>
       <li class="">
-        <a href="Fractals.html">Fractals</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -112,24 +112,24 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -375,8 +375,8 @@ z^n = r^n ( cos n \varphi + i \sin n \varphi) \end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="holomorphic_functions.html" title="previous page">Holomorphic functions</a>
-    <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
+    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
+    <a class='right-next' id="next-link" href="complex_functions.html" title="next page">Complex functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
