--- a/mathematics/complex analysis/holomorphic_functions.html
+++ b/mathematics/complex analysis/holomorphic_functions.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction" href="Introduction.html" />
+    <link rel="next" title="Complex integration" href="integrating.html" />
     <link rel="prev" title="Complex plane" href="complex_plane.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,20 +76,23 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -101,10 +104,7 @@
         <a href="">Holomorphic functions</a>
       </li>
       <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -112,24 +112,24 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -374,7 +374,7 @@ f'(z_0) &amp; = \partial_x u + i \partial_x v =: \partial_x f(z_0) \\
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="complex_plane.html" title="previous page">Complex plane</a>
-    <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
+    <a class='right-next' id="next-link" href="integrating.html" title="next page">Complex integration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
