--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
-    <link rel="prev" title="Theory" href="Theory.html" />
+    <link rel="next" title="Theory" href="Theory.html" />
+    <link rel="prev" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -95,35 +95,35 @@
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
       <li class="">
-        <a href="Theory.html">Theory</a>
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
       <li class="active">
         <a href="">Solving systems of linear equations</a>
       </li>
       <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+        <a href="Theory.html">Theory</a>
       </li>
     </ul>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -853,8 +853,8 @@ I \mathbf{x} = A^{-1}\mathbf{b} \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Theory.html" title="previous page">Theory</a>
-    <a class='right-next' id="next-link" href="Eigenvalues_and_eigenvectors.html" title="next page">Eigenvalues and eigenvectors</a>
+    <a class='left-prev' id="prev-link" href="Eigenvalues_and_eigenvectors.html" title="previous page">Eigenvalues and eigenvectors</a>
+    <a class='right-next' id="next-link" href="Theory.html" title="next page">Theory</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
