--- a/mathematics/linear_algebra/Theory.html
+++ b/mathematics/linear_algebra/Theory.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Solving systems of linear equations" href="Linear_Systems.html" />
-    <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
+    <link rel="next" title="Mathematical Methods 1" href="../math_methods_1/intro.html" />
+    <link rel="prev" title="Solving systems of linear equations" href="Linear_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -94,36 +94,36 @@
       <li class="">
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
-      <li class="active">
-        <a href="">Theory</a>
+      <li class="">
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
-      <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+      <li class="active">
+        <a href="">Theory</a>
       </li>
     </ul>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
       <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -741,8 +741,8 @@ a_{13} \left | \begin{array}{ccc} a_{21} &amp; a_{22} \\ a_{31} &amp; a_{32} \en
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
-    <a class='right-next' id="next-link" href="Linear_Systems.html" title="next page">Solving systems of linear equations</a>
+    <a class='left-prev' id="prev-link" href="Linear_Systems.html" title="previous page">Solving systems of linear equations</a>
+    <a class='right-next' id="next-link" href="../math_methods_1/intro.html" title="next page">Mathematical Methods 1</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
