--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Coordinate systems" href="Coordinate_Systems.html" />
-    <link rel="prev" title="Sets" href="../sets and functions/sets.html" />
+    <link rel="prev" title="Theory" href="../linear_algebra/Theory.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,32 +76,20 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
     </li>
     <li class="">
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
-    </li>
-    <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
-    </li>
-    <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
-    </li>
-    <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="active">
       <a href="">Math Methods 1</a>
@@ -114,10 +102,22 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+    </li>
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
+    </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -227,7 +227,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../sets and functions/sets.html" title="previous page">Sets</a>
+    <a class='left-prev' id="prev-link" href="../linear_algebra/Theory.html" title="previous page">Theory</a>
     <a class='right-next' id="next-link" href="Coordinate_Systems.html" title="next page">Coordinate systems</a>
 
     </div>
