--- a/mathematics/sets and functions/elementary_functions_2.html
+++ b/mathematics/sets and functions/elementary_functions_2.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Elementary functions 1" href="elementary_functions_1.html" />
-    <link rel="prev" title="Composition and Inverse Functions" href="composition_and_inverse.html" />
+    <link rel="next" title="Functions" href="functions.html" />
+    <link rel="prev" title="Elementary functions 1" href="elementary_functions_1.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,14 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,28 +92,31 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+    </li>
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
     </li>
     <li class="active">
       <a href="intro.html">Sets And Functions</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="functions.html">Functions</a>
+        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
       </li>
       <li class="">
-        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
+        <a href="elementary_functions_1.html">Elementary functions 1</a>
       </li>
       <li class="active">
         <a href="">Elementary functions 2</a>
       </li>
       <li class="">
-        <a href="elementary_functions_1.html">Elementary functions 1</a>
+        <a href="functions.html">Functions</a>
       </li>
       <li class="">
         <a href="logic.html">Logic and proof</a>
@@ -124,12 +127,9 @@
     </ul>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -554,8 +554,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="composition_and_inverse.html" title="previous page">Composition and Inverse Functions</a>
-    <a class='right-next' id="next-link" href="elementary_functions_1.html" title="next page">Elementary functions 1</a>
+    <a class='left-prev' id="prev-link" href="elementary_functions_1.html" title="previous page">Elementary functions 1</a>
+    <a class='right-next' id="next-link" href="functions.html" title="next page">Functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
