--- a/mathematics/statistics/intro.html
+++ b/mathematics/statistics/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
-    <link rel="prev" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="../numerical_methods/Timestepping_an_ODE.html" />
+    <link rel="next" title="Linear Regression" href="Linear_Regression.html" />
+    <link rel="prev" title="Sets" href="../sets and functions/sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,22 +76,14 @@
   <li class="">
     <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
   </li>
+  <li class="">
+    <a href="../../geosciences/intro.html">Geosciences</a>
+  </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="active">
-      <a href="">Statistics</a>
-      <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
-      </li>
-      <li class="">
-        <a href="Linear_Regression.html">Linear Regression</a>
-      </li>
-    </ul>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -100,24 +92,32 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../math_methods_1/intro.html">Math Methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
     </li>
     <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
+      <a href="../numerical_methods/intro.html">Numerical Methods</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+    </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
+    </li>
+    <li class="active">
+      <a href="">Statistics</a>
+      <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Linear_Regression.html">Linear Regression</a>
+      </li>
+      <li class="">
+        <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
+      </li>
+    </ul>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
   <li class="">
     <a href="../../genindex.html">Index</a>
@@ -227,8 +227,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../numerical_methods/Timestepping_an_ODE.html" title="previous page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
-    <a class='right-next' id="next-link" href="Statistics_for_Geoscientists.html" title="next page">Introduction to statistics for Geoscientists</a>
+    <a class='left-prev' id="prev-link" href="../sets and functions/sets.html" title="previous page">Sets</a>
+    <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear Regression</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
