deploy: e05705993f2f453f21977d4ba7f72b225bdb47cc

--- a/extra_resources_for_researchers/Particle_Image_Velocimetry.html
+++ b/extra_resources_for_researchers/Particle_Image_Velocimetry.html
@@ -269,10 +269,10 @@ As a general rule of thumbs 10 to 25 particles per interrogation area are good.<
 <p>The dimensions limitations are set by the fact that the particle should be large enough to scatter significant quantity of light to be detected but small enough that the repsonse time of the particles to the motion of the lfuid is reasonably short. Lastly, for 3D PIV particles of equal density to the fluid become very important.</p>
 <p>Note that it is not a requirement to introduce tracers one self, foam, algae and other features can work as tracers as well.</p>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="extra_resources_for_researchers/Data_PIV/drones-03-00014-g002.png"><img alt="extra_resources_for_researchers/Data_PIV/drones-03-00014-g002.png" src="extra_resources_for_researchers/Data_PIV/drones-03-00014-g002.png" style="width: 500px;" /></a>
+<a class="reference internal image-reference" href="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g002.png"><img alt="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g002.png" src="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g002.png" style="width: 500px;" /></a>
 </div>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="extra_resources_for_researchers/Data_PIV/drones-03-00014-g004.png"><img alt="extra_resources_for_researchers/Data_PIV/drones-03-00014-g004.png" src="extra_resources_for_researchers/Data_PIV/drones-03-00014-g004.png" style="width: 500px;" /></a>
+<a class="reference internal image-reference" href="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g004.png"><img alt="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g004.png" src="extra_resources_for_researchers/./Data_PIV/drones-03-00014-g004.png" style="width: 500px;" /></a>
 </div>
 <p>Drone captured image without artificial tracers used to carry out PIV. Calculated flow lines are superimposed and the straight line is a cross-section along which bathymetry will be calculated, the RiVeR software package has similar functions.</p>
 </div>
