deploy: ca08204bf6d4ccdd0f5e393b6646b3570c938600

--- a/coding/Intro to Python/Handling_errors.html
+++ b/coding/Intro to Python/Handling_errors.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="If construct" href="If_statement.html" />
+    <link rel="next" title="File handling in Python" href="File_handling.html" />
     <link rel="prev" title="Creating custom functions" href="Functions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,16 +83,7 @@
       <a href="intro.html">Intro To Python</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Dictionaries.html">Dictionaries</a>
-      </li>
-      <li class="">
-        <a href="File_handling.html">File handling in Python</a>
-      </li>
-      <li class="">
-        <a href="Flow_control_statements.html">Flow control statements</a>
-      </li>
-      <li class="">
-        <a href="For_loops.html">For loops</a>
+        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
       </li>
       <li class="">
         <a href="Functions.html">Creating custom functions</a>
@@ -101,37 +92,46 @@
         <a href="">Handling errors</a>
       </li>
       <li class="">
-        <a href="If_statement.html">If construct</a>
+        <a href="File_handling.html">File handling in Python</a>
+      </li>
+      <li class="">
+        <a href="While_loops.html">While loops</a>
       </li>
       <li class="">
         <a href="Importing.html">Importing in Python</a>
       </li>
       <li class="">
+        <a href="If_statement.html">If construct</a>
+      </li>
+      <li class="">
         <a href="List_comprehensions.html">List comprehensions</a>
-      </li>
-      <li class="">
-        <a href="Lists.html">Lists</a>
-      </li>
-      <li class="">
-        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
-      </li>
-      <li class="">
-        <a href="Nested_lists.html">Nested lists</a>
-      </li>
-      <li class="">
-        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
-      </li>
-      <li class="">
-        <a href="Sets.html">Sets</a>
       </li>
       <li class="">
         <a href="Tuples.html">Tuples</a>
       </li>
       <li class="">
+        <a href="Sets.html">Sets</a>
+      </li>
+      <li class="">
+        <a href="For_loops.html">For loops</a>
+      </li>
+      <li class="">
+        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
+      </li>
+      <li class="">
+        <a href="Lists.html">Lists</a>
+      </li>
+      <li class="">
+        <a href="Dictionaries.html">Dictionaries</a>
+      </li>
+      <li class="">
         <a href="Variables.html">Variables</a>
       </li>
       <li class="">
-        <a href="While_loops.html">While loops</a>
+        <a href="Nested_lists.html">Nested lists</a>
+      </li>
+      <li class="">
+        <a href="Flow_control_statements.html">Flow control statements</a>
       </li>
     </ul>
     </li>
@@ -381,7 +381,7 @@ Please use digits in your string.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Functions.html" title="previous page">Creating custom functions</a>
-    <a class='right-next' id="next-link" href="If_statement.html" title="next page">If construct</a>
+    <a class='right-next' id="next-link" href="File_handling.html" title="next page">File handling in Python</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
