--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
-    <link rel="prev" title="Complex integration" href="../complex analysis/integrating.html" />
+    <link rel="prev" title="Fractals" href="../complex analysis/Fractals.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -95,13 +95,13 @@
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
       <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+        <a href="Theory.html">Theory</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
       <li class="">
-        <a href="Theory.html">Theory</a>
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
     </ul>
     </li>
@@ -252,7 +252,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../complex analysis/integrating.html" title="previous page">Complex integration</a>
+    <a class='left-prev' id="prev-link" href="../complex analysis/Fractals.html" title="previous page">Fractals</a>
     <a class='right-next' id="next-link" href="Basic_definitions_and_operations.html" title="next page">Basic definitions and operations</a>
 
     </div>
