--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Coordinate systems" href="Coordinate_Systems.html" />
-    <link rel="prev" title="Theory" href="../linear_algebra/Theory.html" />
+    <link rel="prev" title="Eigenvalues and eigenvectors" href="../linear_algebra/Eigenvalues_and_eigenvectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -227,7 +227,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../linear_algebra/Theory.html" title="previous page">Theory</a>
+    <a class='left-prev' id="prev-link" href="../linear_algebra/Eigenvalues_and_eigenvectors.html" title="previous page">Eigenvalues and eigenvectors</a>
     <a class='right-next' id="next-link" href="Coordinate_Systems.html" title="next page">Coordinate systems</a>
 
     </div>
