--- a/mathematics/sets and functions/logic.html
+++ b/mathematics/sets and functions/logic.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Sets" href="sets.html" />
-    <link rel="prev" title="Functions" href="functions.html" />
+    <link rel="prev" title="Elementary functions 1" href="elementary_functions_1.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -107,16 +107,16 @@
       <a href="intro.html">Sets And Functions</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
+        <a href="functions.html">Functions</a>
       </li>
       <li class="">
-        <a href="elementary_functions_1.html">Elementary functions 1</a>
+        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
       </li>
       <li class="">
         <a href="elementary_functions_2.html">Elementary functions 2</a>
       </li>
       <li class="">
-        <a href="functions.html">Functions</a>
+        <a href="elementary_functions_1.html">Elementary functions 1</a>
       </li>
       <li class="active">
         <a href="">Logic and proof</a>
@@ -343,7 +343,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="functions.html" title="previous page">Functions</a>
+    <a class='left-prev' id="prev-link" href="elementary_functions_1.html" title="previous page">Elementary functions 1</a>
     <a class='right-next' id="next-link" href="sets.html" title="next page">Sets</a>
 
     </div>
