--- a/mathematics/statistics/intro.html
+++ b/mathematics/statistics/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Linear Regression" href="Linear_Regression.html" />
+    <link rel="next" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
     <link rel="prev" title="Sets" href="../sets and functions/sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,10 +110,10 @@
       <a href="">Statistics</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Linear_Regression.html">Linear Regression</a>
+        <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
       </li>
       <li class="">
-        <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
+        <a href="Linear_Regression.html">Linear Regression</a>
       </li>
     </ul>
     </li>
@@ -228,7 +228,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../sets and functions/sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear Regression</a>
+    <a class='right-next' id="next-link" href="Statistics_for_Geoscientists.html" title="next page">Introduction to statistics for Geoscientists</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
