--- a/extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
+++ b/extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
-    <link rel="prev" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="next" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="prev" title="Extra resources for researchers" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,20 +76,20 @@
   <li class="active">
     <a href="intro.html">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
+    <li class="active">
+      <a href="">Google Earth Engine Getting Started</a>
+    </li>
     <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+    </li>
+    <li class="">
+      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
-    </li>
-    <li class="active">
-      <a href="">Google Earth Engine Getting Started</a>
-    </li>
-    <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
   </ul>
   </li>
@@ -325,8 +325,8 @@ For each dataset there is also a few lines of code provided showing how to best 
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Foundations.html" title="previous page">Google Earth Engine Foundations</a>
-    <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Extra resources for researchers</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine Foundations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
