--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Waves" href="Wave_dispersion.html" />
-    <link rel="prev" title="Downloading earthquake data" href="Seismology.html" />
+    <link rel="next" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
+    <link rel="prev" title="Constructing an energy balance model" href="Climate_Model.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -80,34 +80,34 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
-    </li>
-    <li class="">
-      <a href="Climate_Model.html">Constructing an energy balance model</a>
-    </li>
-    <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
-    </li>
-    <li class="">
-      <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
     </li>
     <li class="">
       <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
-      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
-    </li>
-    <li class="">
-      <a href="Seismology.html">Downloading earthquake data</a>
+      <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
     <li class="active">
       <a href="">Tides</a>
     </li>
     <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
+    </li>
+    <li class="">
       <a href="Wave_dispersion.html">Waves</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+    </li>
+    <li class="">
+      <a href="Image_Filtering.html">Image Filtering</a>
+    </li>
+    <li class="">
+      <a href="Seismology.html">Downloading earthquake data</a>
+    </li>
+    <li class="">
+      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
     </li>
   </ul>
   </li>
@@ -507,8 +507,8 @@ where <span class="math notranslate nohighlight">\(\omega_1=\frac{360^\circ}{24.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Seismology.html" title="previous page">Downloading earthquake data</a>
-    <a class='right-next' id="next-link" href="Wave_dispersion.html" title="next page">Waves</a>
+    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing an energy balance model</a>
+    <a class='right-next' id="next-link" href="Milankovitch_cycles.html" title="next page">Milankovitch cycles</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
