--- a/mathematics/complex analysis/Fractals.html
+++ b/mathematics/complex analysis/Fractals.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction" href="Introduction.html" />
-    <link rel="prev" title="Complex Analysis" href="intro.html" />
+    <link rel="next" title="Linear Algebra" href="../linear_algebra/intro.html" />
+    <link rel="prev" title="Introduction" href="Introduction.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -88,11 +88,8 @@
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
-      <li class="active">
-        <a href="">Fractals</a>
-      </li>
       <li class="">
-        <a href="Introduction.html">Introduction</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -104,7 +101,10 @@
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Introduction.html">Introduction</a>
+      </li>
+      <li class="active">
+        <a href="">Fractals</a>
       </li>
     </ul>
     </li>
@@ -722,8 +722,8 @@ y \in \langle 0.1, 0.3\rangle\end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
-    <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
+    <a class='left-prev' id="prev-link" href="Introduction.html" title="previous page">Introduction</a>
+    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear Algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
