--- a/mathematics/linear_algebra/Basic_definitions_and_operations.html
+++ b/mathematics/linear_algebra/Basic_definitions_and_operations.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
+    <link rel="next" title="Theory" href="Theory.html" />
     <link rel="prev" title="Linear Algebra" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,13 +95,13 @@
         <a href="">Basic definitions and operations</a>
       </li>
       <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+        <a href="Theory.html">Theory</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
       <li class="">
-        <a href="Theory.html">Theory</a>
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
     </ul>
     </li>
@@ -819,7 +819,7 @@ f(\alpha \mathbf{x}) = \alpha f(\mathbf{x}),\end{split}\]</div>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Linear Algebra</a>
-    <a class='right-next' id="next-link" href="Eigenvalues_and_eigenvectors.html" title="next page">Eigenvalues and eigenvectors</a>
+    <a class='right-next' id="next-link" href="Theory.html" title="next page">Theory</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
