--- a/mathematics/numerical_methods/intro.html
+++ b/mathematics/numerical_methods/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
-    <link rel="prev" title="Review of tensors" href="../mathematical_notation/Tensors_Review.html" />
+    <link rel="prev" title="Big O notation" href="../mathematical_notation/Big_O_notation.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -224,7 +224,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematical_notation/Tensors_Review.html" title="previous page">Review of tensors</a>
+    <a class='left-prev' id="prev-link" href="../mathematical_notation/Big_O_notation.html" title="previous page">Big O notation</a>
     <a class='right-next' id="next-link" href="Timestepping_an_ODE.html" title="next page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
 
     </div>
