--- a/mathematics/sets and functions/intro.html
+++ b/mathematics/sets and functions/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Composition and Inverse Functions" href="composition_and_inverse.html" />
-    <link rel="prev" title="Taylor series" href="../series_and_sequences/Taylor_series.html" />
+    <link rel="next" title="Functions" href="functions.html" />
+    <link rel="prev" title="Fourier Transforms" href="../series_and_sequences/Fourier Transforms.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -107,16 +107,16 @@
       <a href="">Sets And Functions</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
+        <a href="functions.html">Functions</a>
       </li>
       <li class="">
-        <a href="elementary_functions_1.html">Elementary functions 1</a>
+        <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
       </li>
       <li class="">
         <a href="elementary_functions_2.html">Elementary functions 2</a>
       </li>
       <li class="">
-        <a href="functions.html">Functions</a>
+        <a href="elementary_functions_1.html">Elementary functions 1</a>
       </li>
       <li class="">
         <a href="logic.html">Logic and proof</a>
@@ -273,8 +273,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../series_and_sequences/Taylor_series.html" title="previous page">Taylor series</a>
-    <a class='right-next' id="next-link" href="composition_and_inverse.html" title="next page">Composition and Inverse Functions</a>
+    <a class='left-prev' id="prev-link" href="../series_and_sequences/Fourier Transforms.html" title="previous page">Fourier Transforms</a>
+    <a class='right-next' id="next-link" href="functions.html" title="next page">Functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
