--- a/mathematics/statistics/Linear_Regression.html
+++ b/mathematics/statistics/Linear_Regression.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
-    <link rel="prev" title="Statistics" href="intro.html" />
+    <link rel="next" title="Index" href="../../genindex.html" />
+    <link rel="prev" title="Introduction to statistics for Geoscientists" href="Statistics_for_Geoscientists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -109,11 +109,11 @@
     <li class="active">
       <a href="intro.html">Statistics</a>
       <ul class="nav sidenav_l3">
-      <li class="active">
-        <a href="">Linear Regression</a>
-      </li>
       <li class="">
         <a href="Statistics_for_Geoscientists.html">Introduction to statistics for Geoscientists</a>
+      </li>
+      <li class="active">
+        <a href="">Linear Regression</a>
       </li>
     </ul>
     </li>
@@ -542,8 +542,8 @@ square of the difference between the data and the polynomial of degree 5 = 7.232
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Statistics</a>
-    <a class='right-next' id="next-link" href="Statistics_for_Geoscientists.html" title="next page">Introduction to statistics for Geoscientists</a>
+    <a class='left-prev' id="prev-link" href="Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
+    <a class='right-next' id="next-link" href="../../genindex.html" title="next page">Index</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
